// Copyright 2024 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package ethereum.eth.v1alpha1;

import "proto/eth/ext/options.proto";

option csharp_namespace = "Ethereum.Eth.v1alpha1";
option go_package = "github.com/prysmaticlabs/prysm/v5/proto/prysm/v1alpha1;eth";
option java_multiple_files = true;
option java_outer_classname = "BlindPayloadEnvelopeProto";
option java_package = "org.ethereum.eth.v1alpha1";
option php_namespace = "Ethereum\\Eth\\v1alpha1";

message SignedBlindPayloadEnvelope {
    BlindPayloadEnvelope message = 1;
    bytes signature 		 = 2 [(ethereum.eth.ext.ssz_size) = "96"];
}

message BlindPayloadEnvelope {
    bytes payload_root 		= 1 [(ethereum.eth.ext.ssz_size) = "32"];
    uint64 builder_index 	     		= 2 [(ethereum.eth.ext.cast_type) = "github.com/prysmaticlabs/prysm/v5/consensus-types/primitives.ValidatorIndex"];
    bytes beacon_block_root 		= 3 [(ethereum.eth.ext.ssz_size) = "32"];
    repeated bytes blob_kzg_commitments 	= 4 [(ethereum.eth.ext.ssz_size) = "?,48", (ethereum.eth.ext.ssz_max)  = "max_blob_commitments.size"];
    uint64 inclusion_list_proposer_index   	= 5 [(ethereum.eth.ext.cast_type) = "github.com/prysmaticlabs/prysm/v5/consensus-types/primitives.ValidatorIndex"];
    uint64 inclusion_list_slot 		= 6 [(ethereum.eth.ext.cast_type) = "github.com/prysmaticlabs/prysm/v5/consensus-types/primitives.Slot"];
    bytes inclusion_list_signature 		= 7 [(ethereum.eth.ext.ssz_size) = "96"];
    bool payload_withheld 			= 8;
    bytes state_root 			= 9 [(ethereum.eth.ext.ssz_size) = "32"];
}
